# barebones-python

./: Makefile  README.md  pyproject.toml
tests/: test_calculator.py
